# sol

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker_image.yml  markdown.yml  rust.yml
src/: cli_struct.rs  config.rs  lib.rs  main.rs
src/autohold/: cli.rs  list_command.rs  list_example.txt  list_parameters.rs  list_struct.rs
src/builds/: builds_struct.rs  cli.rs  command.rs  example.txt  parameters.rs
src/buildsets/: bs_struct.rs  cli.rs  command.rs  example.txt  parameters.rs
src/enums/: bsresult.rs  output.rs
src/functions/: cli.rs
src/functions/build_node/: cli.rs  command.rs  parameters.rs
src/util/: diffdatetime_now.rs  easy.rs  helpers.rs
