[package]
name = "sol"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
clap_complete = "4.5.33"
comfy-table = "7.1.1"
curl = "0.4.47"
env_logger = "0.11.5"
flate2 = "1.0.34"
fs-more = "0.8.0"
lazy_static = "1.5.0"
log = "0.4.22"
num-integer = "0.1.46"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.129"
serde_yaml = "0.9.34"

[profile.release]
# Binary optimization for release build
# https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
